--- a/style.css
+++ b/style.css
@@ -92,6 +92,7 @@
     -moz-border-radius: 1.25em;
     -webkit-border-radius: 1.25em;
     border-radius: 1.25em;
+    margin: 0 auto;
 }
 
 .ubahnsign {
@@ -103,6 +104,7 @@
     -moz-border-radius: 1.25em;
     -webkit-border-radius: 1.25em;
     border-radius: 1.25em;
+    margin: 0 auto;
 }
 
 .tramsign {
@@ -112,6 +114,7 @@
     height: 1.25em;
     background: #BE1414;
     position: relative;
+    margin: 0 auto;
 }
 
 .bussign {
@@ -120,6 +123,7 @@
     width: 3.5em;
     height: 1.25em;
     position: relative;
+    margin: 0 auto;
 }
 
 .dbsign {
@@ -129,6 +133,7 @@
     height: 1.25em;
     background: #BE1414;
     position: relative;
+    margin: 0 auto;
 }
 
 
